Revision history for Perl extension App-RunCron

{{$NEXT}}
    - add writing sperator line process in Reporter::File
    - `child_signal` and `child_exit_code` return -1 if command is not executed
    - use Sys::Hostename for portability

0.03 2013-10-22T19:03:28Z
    - add document of Test::App::RunCron

0.02 2013-10-22T18:52:41Z
    - add test framework for RunCron
    - use `mkpath` for more safety in Reporter::File

0.01 2013-10-20T07:28:35Z
    - original version