@@ -50,15 +50,17 @@ If logfile is specified, stdout and stderr of the command will be logged to the 
 If not specified, the outputs will not be logged.
 The logfile can be a `strftime` format. eg. '%Y-%m-%d.log'. (NOTICE: '%' must be escaped in crontab.)
 
-## reporter|error\_reporter
+## reporter|error\_reporter|common\_reporter
 
-The reporter and error\_reporter can be like following.
+`common_reporter` is optional, processing after `(error_)?reporter` is handled.
+
+The `reporter`, `error_reporter` and `common_reporter` can be like following.
 
 - `$module_name`
 - `[$module_name[, \%opt], ...]`
 - `$coderef`
 
-_$module\_name_ package name of the plugin. You can write it as two form like [DBIx::Class](http://search.cpan.org/perldoc?DBIx::Class):
+_$module\_name_ package name of the plugin. You can write it as two form like [Plack::Middleware](http://search.cpan.org/perldoc?Plack::Middleware):
 
     reporter => 'Stdout',    # => loads App::RunCron::Reporter::Stdout
 
@@ -91,6 +93,10 @@ same as `$?`
 ### `my $int = $self->child_exit_code`
 
 exit code of child process.
+
+### `my $int = $self->child_signal`
+
+signal number if chile process accepted a signal.
 
 # SEE ALSO
 
